<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#cfc987" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#cfc987" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textSize="25sp"
        android:text="@string/menu_taxi_request" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_marginTop="66dp"
        android:textSize="25sp"
        android:text="@string/menu_log_out" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="65dp"
        android:text="@string/menu_central_request"
        android:textSize="25sp" />

</RelativeLayout>
